[tool.poetry]
name = "weather-service"
version = "0.1.0"
description = ""
authors = ["Viktor <karpenkotakeoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.104.1" }
databases = "^0.8.0"
black = "^23.11.0"
isort = "^5.12.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

